CHORE : API ID 정보 추가

--- a/MINI_PROJECT/프로젝트 기획서.md
+++ b/MINI_PROJECT/프로젝트 기획서.md
@@ -27,14 +27,15 @@
 
 ## 4. API 설계
 ### 4.1 엔드포인트 목록
-- GET    /api/...
-- POST   /api/...
-- PUT    /api/...
-- DELETE /api/...
+### Unique한 API ID 규칙 만들기 
+- MT010101 GET    /api/...
+- MT010102 POST   /api/...
+- MT010201 PUT    /api/...
+- MT010202 DELETE /api/...
 
 ## 5. 개발 일정
 - [ ] 데이터베이스 설계
 - [ ] DDL 작성
 - [ ] API 설계
-- [ ] 테스트
+- [ ] API 테스트
 - [ ] 발표 준비
