--- a/MINI_PROJECT/발표자료.md
+++ b/MINI_PROJECT/발표자료.md
@@ -1,6 +1,12 @@
-발표 준비 (팀당 3~5분)
+개발
+- 데이터베이스 및 테이블 생성
+- Dummy Data 적재
+- API 개발
+- API 테스트
+
+발표
 - 주요 기능 소개
-- DB ERD 설명
+- DB 구조 설명
 - 구현 API 설명
 - API 데모
 - 선택 : 개발하면서 어려웠던 점
