--- a/MINI_PROJECT/개발 및 발표.md
+++ b/MINI_PROJECT/개발 및 발표.md
@@ -13,6 +13,9 @@
 발표 준비 (17시 30분까지)
 - 주요 기능 소개
 - DB 구조 설명
-- 구현 API 설명
+- 구현 API 중 택1 설명
 - API 데모
 - 선택 : 개발하면서 어려웠던 점 / 좀 더 깊이 고려했던 점
+
+작업 내용
+- git 
